# autoresearch-anything

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/: memory.md
examples/code-benchmark/: experiment.yaml
examples/gpt-pretrain/: experiment.yaml
examples/prompt-optimization/: experiment.yaml
src/autoresearch/: __init__.py  cli.py  manifest.py  program.py  tracker.py
templates/: program.md.jinja
