[project]
name = "autoresearch-anything"
version = "0.1.0"
description = "General-purpose autonomous experimentation framework for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch"]

[project.scripts]
autoresearch = "autoresearch.cli:main"
